--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-/target
+**/*.rs.bk
+.#*
+.gdb_history
+target/
+
+# editor files
+.vscode/*
+!.vscode/*.md
+!.vscode/*.svd
+!.vscode/launch.json
+!.vscode/tasks.json
+!.vscode/extensions.json
+
+#Ozone
+*.user
+
+#CTags
+**/tags
