--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,67 @@
 [package]
+authors = ["oinke-rs developer group"]
+edition = "2018"
+readme = "README.md"
 name = "oinke-rs"
 version = "0.1.0"
-edition = "2018"
+resolver = "2"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["logs"]
+logs = []
+prod = []
 
 [dependencies]
+cortex-m = "0.6.7"
+cortex-m-rt = "0.6.13"
+cortex-m-rtic = "0.5.6"
+nb = "0.1.3"
+embedded-hal = "0.2.4"
+log = "0.4"
+jlink_rtt = "0.2"
+bitfield = "0.13.2"
+num_enum = { version = "0.5.1", default-features = false }
+arrayvec = { version = "0.7.1", default-features = false }
+heapless = { version = "0.7" }
+bmp280-ehal = "0.0.5"
+
+[dependencies.stm32f4xx-hal]
+version = "*"
+features = ["rt", "stm32f411"]
+
+[build-dependencies]
+built = { version = "0.5", features = ["git2", "chrono", "semver"] }
+
+
+[profile.dev]
+opt-level = 1
+
+[profile.release]
+codegen-units = 1 # better optimizations
+debug = true # symbols are nice and they don't increase the size on Flash
+lto = true # better optimizations
+opt-level = "z"
+
+# Catching bugs in release
+debug-assertions = true
+overflow-checks = true
+
+
+## Faster builds
+[profile.dev.build-override]
+codegen-units = 8
+debug = false
+debug-assertions = true 
+incremental = true
+opt-level = 0
+overflow-checks = true
+
+[profile.release.build-override]
+codegen-units = 8
+debug = false
+debug-assertions = true 
+incremental = true
+opt-level = 0
+overflow-checks = true
+
+
