--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,15 @@ num_enum = { version = "0.5.1", default-features = false }
 arrayvec = { version = "0.7.1", default-features = false }
 heapless = { version = "0.7" }
 bmp280-ehal = "0.0.5"
+usb-device = "*"
+usbd-hid = "0.5.0"
 
 [dependencies.stm32f4xx-hal]
 version = "*"
-features = ["rt", "stm32f411"]
+features = ["rt", "stm32f411", "usb_fs"]
+[pathc.crate-io.stm32f4xx_hal]
+git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
+
 
 [build-dependencies]
 built = { version = "0.5", features = ["git2", "chrono", "semver"] }
